fix overflowing collaboration text field

--- a/src/migration-mdc.scss
+++ b/src/migration-mdc.scss
@@ -258,6 +258,11 @@ mat-checkbox, .mdc-form-field.mat-internal-form-field {
   white-space: nowrap !important;
 }
 
+app-collaboration-card .mdc-form-field.mat-internal-form-field {
+  width: 100% !important;
+  white-space: initial !important;
+}
+
 // Expansion panel's content in search pages
 body app-filters mat-expansion-panel.mat-expansion-panel.mat-expanded, body .filters-dialog mat-expansion-panel.mat-expansion-panel.mat-expanded {
   font-size: 0.88rem;
